load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools:protobuf.bzl", "elixir_proto_library")

proto_library(
    name = "com_github_com_uhthomas_rasmus_test_v1_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "com_github_com_uhthomas_rasmus_test_v1_go_proto",
    importpath = "github.com/uhthomas/rasmus/lib/protobuf",
    proto = ":com_github_com_uhthomas_rasmus_test_v1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "protobuf",
    embed = [":com_github_com_uhthomas_rasmus_test_v1_go_proto"],
    importpath = "github.com/uhthomas/rasmus/lib/protobuf",
    visibility = ["//visibility:public"],
)

elixir_proto_library(
    name = "com_github_com_uhthomas_rasmus_test_v1_elixir_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
)
